--- a/app/src/main/res/layout/learning_leaders_fragment.xml
+++ b/app/src/main/res/layout/learning_leaders_fragment.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".LearningLeaders">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/hour_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
-
+        tools:listitem="@layout/recycler_views" />
 </FrameLayout>
