--- a/app/src/main/res/layout/recycler_views2.xml
+++ b/app/src/main/res/layout/recycler_views2.xml
@@ -16,7 +16,7 @@
         card_view:cardElevation="4sp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/linearLayout"
+            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="bottom"
@@ -25,36 +25,38 @@
 
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/imageView2"
                 android:layout_width="110sp"
                 android:layout_height="100sp"
-                android:layout_marginBottom="16dp"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@drawable/top_learner" />
 
             <TextView
-                android:id="@+id/learner_name"
-                android:layout_width="287dp"
+                android:id="@+id/learner_name2"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                card_view:layout_constraintStart_toEndOf="@+id/imageView"
-                tools:layout_editor_absoluteY="16dp" />
+                card_view:layout_constraintBottom_toTopOf="@+id/learner_stats2"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintStart_toEndOf="@+id/imageView2" />
 
             <TextView
-                android:id="@+id/learner_stats"
-                android:layout_width="287dp"
+                android:id="@+id/learner_stats2"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginEnd="4dp"
                 android:layout_marginBottom="8dp"
                 android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                card_view:layout_constraintBottom_toBottomOf="@+id/imageView"
-                card_view:layout_constraintStart_toStartOf="@+id/learner_name"
-                card_view:layout_constraintTop_toBottomOf="@+id/learner_name" />
+                card_view:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                card_view:layout_constraintEnd_toEndOf="parent"
+                card_view:layout_constraintHorizontal_bias="0.0"
+                card_view:layout_constraintStart_toStartOf="@+id/learner_name2" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
