--- a/app/src/main/res/layout/content_submit2.xml
+++ b/app/src/main/res/layout/content_submit2.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/round_edit_text"
-        android:hint="name"
+        android:hint="First Name"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
         app:layout_constraintEnd_toStartOf="@+id/address"
